frameworks/base: Exact time display for Chinese
Change-Id: Ic7f8340ddccfbcab63a9d4531b9fed2e0b2e7195

--- a/core/res/res/values/mk_symbols.xml
+++ b/core/res/res/values/mk_symbols.xml
@@ -38,4 +38,14 @@
   <java-symbol type="string" name="status_year" />
   <java-symbol type="string" name="status_day" />
 
+  <!-- Exact Time -->
+  <java-symbol type="string" name="lc" />
+  <java-symbol type="string" name="lm" />
+  <java-symbol type="string" name="zc" />
+  <java-symbol type="string" name="sw" />
+  <java-symbol type="string" name="zw" />
+  <java-symbol type="string" name="xw" />
+  <java-symbol type="string" name="bw" />
+  <java-symbol type="string" name="sy" />
+
 </resources>
