SystemUI: lunar date in statusbar
Change-Id: If4936b8ff7687a92ce081e217346d3f6b832d15d

Conflicts:
	core/mokee/res/values-zh-rCN/donottranslate-cldr.xml
	core/mokee/res/values-zh-rTW/donottranslate-cldr.xml
	core/mokee/res/values/donottranslate-cldr.xml
	core/res/res/values/mk_symbols.xml
	packages/SystemUI/res/layout/status_bar_expanded_header.xml

--- a/core/res/res/values-zh-rCN/donottranslate-cldr.xml
+++ b/core/res/res/values-zh-rCN/donottranslate-cldr.xml
@@ -6,4 +6,17 @@
     <string name="time_of_day">%p %I:%M:%S</string>
     <string name="date_and_time">%Y 年 %-m 月 %-e 日%p %I:%M:%S</string>
     <string name="date_time">%1$s %2$s</string>
+
+    <!-- Exact time Display -->
+    <string name="lc">凌晨</string>
+    <string name="lm">黎明</string>
+    <string name="zc">早晨</string>
+    <string name="sw">上午</string>
+    <string name="zw">中午</string>
+    <string name="xw">下午</string>
+    <string name="bw">晚上</string>
+    <string name="sy">深夜</string>
+
+    <!-- Lunar string format -->
+    <string name="abbrev_wday_month_day_year">yyyy 年 M 月 d 日 EEE</string>
 </resources>
