--- a/core/res/res/values/mk_symbols.xml
+++ b/core/res/res/values/mk_symbols.xml
@@ -40,6 +40,7 @@
   <java-symbol type="string" name="status_month" />
   <java-symbol type="string" name="status_year" />
   <java-symbol type="string" name="status_day" />
+  <java-symbol type="string" name="system_ui_date_pattern" />
 
   <!-- Exact Time -->
   <java-symbol type="string" name="lc" />
