Lunar Display update

--- a/core/res/res/values-zh-rCN/donottranslate-cldr.xml
+++ b/core/res/res/values-zh-rCN/donottranslate-cldr.xml
@@ -18,5 +18,6 @@
     <string name="sy">深夜</string>
 
     <!-- Lunar string format -->
-    <string name="abbrev_wday_month_day_year">yyyy 年 M 月 d 日 EEE</string>
+    <string name="abbrev_wday_month_day_year">yyyy 年 M 月 d 日EEE</string>
+    <string name="abbrev_wday_month_day_no_year">M 月 d 日E</string>
 </resources>
