--- a/core/res/res/values-zh-rTW/donottranslate-cldr.xml
+++ b/core/res/res/values-zh-rTW/donottranslate-cldr.xml
@@ -19,4 +19,5 @@
 
     <!-- Lunar string format -->
     <string name="abbrev_wday_month_day_year">yyyy 年 M 月 d 日EEE</string>
+    <string name="abbrev_wday_month_day_no_year">M 月 d 日E</string>
 </resources>
