--- a/core/res/res/values/donottranslate-cldr.xml
+++ b/core/res/res/values/donottranslate-cldr.xml
@@ -19,4 +19,5 @@
 
     <!-- Lunar string format -->
     <string name="abbrev_wday_month_day_year">EEE, MMM d, yyyy</string>
+    <string name="abbrev_wday_month_day_no_year">EEE, MMMM d</string>
 </resources>
