--- a/packages/SystemUI/res/values/donottranslate.xml
+++ b/packages/SystemUI/res/values/donottranslate.xml
@@ -17,6 +17,8 @@
  */
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <!-- Date format for display: should match the lockscreen in /policy. -->
+    <string name="abbrev_wday_month_day_no_year">@*android:string/abbrev_wday_month_day_no_year</string>
     <!-- DO NOT TRANSLATE. ICU date format for display.  -->
     <string name="system_ui_date_pattern" translatable="false">MMMMd</string>
     <!-- DO NOT TRANSLATE. ICU weekday format for display -->
