--- a/packages/SystemUI/res/layout/status_bar_expanded_header.xml
+++ b/packages/SystemUI/res/layout/status_bar_expanded_header.xml
@@ -50,21 +50,21 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:layout_toEndOf="@id/clock"           
-            >  
-    <com.android.systemui.statusbar.policy.DateView 
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:textAppearance="@style/TextAppearance.StatusBar.Expanded.Date"
-        />
+            >
     <com.android.systemui.statusbar.policy.LunarDateView
         android:id="@+id/lunardate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:textAppearance="@style/TextAppearance.StatusBar.Expanded.Date"
-        android:layout_below="@id/date"
+        />
+    <com.android.systemui.statusbar.policy.DateView 
+        android:id="@+id/date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:textAppearance="@style/TextAppearance.StatusBar.Expanded.Date"
+        android:layout_below="@id/lunardate"
         />
         </RelativeLayout>
 
